<resources>
    <string name="app_name">Note App</string>
    <string name="new_note">New Note</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Title</string>
    <string name="note_body">This is a post body</string>
    <string name="previous_notes">Previous Notes</string>
    <string name="save_note">Save</string>
    <string name="tap_to_write">Tap to start writing here</string>
    <string name="edit_note">Edit Note</string>
    <string name="update_note">Update</string>
    <string name="delete_note">Delete</string>
    <string name="remove_note">remove note</string>
    <string name="modal_title">Modal Title</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>