<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivNoteHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/note_header"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPreviousNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/black_outline_bg"
        android:text="@string/previous_notes"
        android:textColor="?attr/colorPrimary"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnAddNote"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNoteHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/primary_filled_bg"
        android:text="@string/new_note"
        app:layout_constraintBaseline_toBaselineOf="@id/btnPreviousNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPreviousNotes" />

    <LinearLayout
        android:id="@+id/entryContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/light_purple_bg"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPreviousNotes">

        <TextView
            android:id="@+id/new_Note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/new_note"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:hint="@string/note_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/etNoteBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="@string/tap_to_write"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/primary_filled_bg"
        android:text="@string/save_note"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>