<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="16sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/note_title"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noteBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/note_body"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/danger_outline_bg"
            android:contentDescription="@string/remove_note"
            android:padding="8dp"
            android:src="@drawable/ic_delete"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llContent"
            app:tint="?attr/colorError" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>