<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/tvModalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modal_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvModalBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/modal_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvModalTitle" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/primary_outline_bg"
            android:text="@string/no"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvModalBody" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/danger_filled_bg"
            android:text="@string/yes"
            android:textColor="?attr/colorOnError"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBaseline_toBaselineOf="@id/btnNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNo" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>